bundle/05-traefik-ingressroutes.yaml
# example middlewares
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  namespace: traefik
  name: ip-any
spec:
  ipWhiteList:
    sourceRange:
    - 0.0.0.0/0
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  namespace: traefik
  name: redirect-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - http
  routes:
  - match: Host(`traefik.localhost`)
    kind: Rule
    middlewares:
    services:
    - name: traefik-internal
      port: 8080
      scheme: http
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: metrics
spec:
  entryPoints:
    - http
  routes:
  - match: Host(`grafana.localhost`)
    kind: Rule
    middlewares:
    services:
    - name: prometheus-grafana
      port: 80
      scheme: http
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: metrics
spec:
  entryPoints:
    - http
  routes:
  - match: Host(`prometheus.localhost`)
    kind: Rule
    middlewares:
    services:
    - name: prometheus-kube-prometheus-prometheus
      port: 9090
      scheme: http
